--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"helmet": "^3.21.2",
 		"jest": "^26.0.1",
 		"knex": "^0.20.4",
+		"react-router-dom": "^5.2.0",
 		"sqlite3": "^4.1.1",
 		"supertest": "^4.0.2"
 	},
